--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <!-- HTMLコード -->
 <h2>テストHTML</h2>
-/* CSSコード 編集しました。*/
+/* CSSコード 編集しました。ローカルで編集しました*/
 h2 {
   position: relative;
   padding: 5px 5px 5px 42px;
